chore(config): switch to Anthropic (gen) + Voyage (embed); update .env.example and requirements

--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,12 @@ USE_RRF=false
 EVIDENCE_TOPK=4
 EVIDENCE_THRESHOLD=0.28
 
-# Mistral
-LLM_PROVIDER=mistral
-MISTRAL_API_KEY=
-MISTRAL_MODEL=mistral-large-latest
+# Anthropic (generation)
+LLM_PROVIDER=anthropic
+ANTHROPIC_API_KEY=
+ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
-# Embeddings
-EMBEDDING_PROVIDER=mistral
-EMBEDDING_MODEL=mistral-embed
+# Voyage (embeddings)
+EMBEDDING_PROVIDER=voyage
+VOYAGE_API_KEY=
+EMBEDDING_MODEL=voyage-3.5
